package br.pucminas.matriculas.model;

public enum StatusDisciplina {
    PLANEJADA,
    ATIVA,
    CANCELADA,
    LOTADA
}
