package br.pucminas.matriculas.model;

public enum TipoMatricula {
    OBRIGATORIA,
    OPTATIVA
}
